--- a/css_Files/RoutePredictionGraph.css
+++ b/css_Files/RoutePredictionGraph.css
@@ -1,14 +1,14 @@
- html 
+ html
  {
-            
     font-family: Arial, sans-serif;
     background: #22C1C3;
     background: linear-gradient(0deg,rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
     border: #22C1C3;
     background-repeat: no-repeat; /* Ensure no repetition */
     background-size: cover; /* Scale the image to cover the viewport */
-    height:100%;
+    height:auto;
     width: 100%;
+   
 }
 
 .dashboard 
@@ -42,8 +42,6 @@
     color: #2c3e50;
    text-align: center;
 }
-
-    
 .airplane 
 {
     position: absolute;
@@ -54,77 +52,6 @@
     background-color: transparent; /* Ensures no background color for the image container */
     mix-blend-mode: multiply; /* Blends the image with its background */
 }
-
-
-.container 
-{
-    display: flex; 
-    justify-content: space-between; /* Distribute items with space between them */
-    gap: 10px; 
-    font-size: 16px;
-    padding: 60px;
-    width: 100%;
-}
-.box 
-{
-    width: 100px; /* Set width for each div */
-    height: 100px;/* Set height for each div */
-    background-color: lightblue; /* Add background color for visibility */
-    text-align: center; /* Center text horizontally */
-    line-height: 100px; /* Center text vertically */
-    border: 1px solid #ccc; /* Add border for better visibility */
-}
-
-.dropdown 
-{
-    font-size: 16px;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #b9ccbd;
-    width: 100%;
-    background-color: #66ae55;;
-}
-
-.location-start {
-    top: 60%;
-    left: 10%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.location-end {
-    top: 30%;
-    right: 10%;
-    transform: translate(50%, -50%);
-    text-align: center;
-}
-.flight-path 
-{
-    position: relative;
-    width: 100%;
-    height: 20px;
-    margin: 10px auto;
-    overflow: hidden;
-}
-.curve {
-position: absolute;
-top: 20%;
-left: 0;
-right: 0;
-height: 50px;
-border-top: 4px solid #558dae;
-border-radius: 50%;
-
-}
-.month-selection
-{
-    font-size: 16px;
-    padding: 20px;
-    border-radius: 5px;
-    border: 2px solid #b9ccbd;
-    background-color: #66ae55;
-}
-
 #submitBtn
 {
     margin-top:20px;
@@ -134,10 +61,10 @@ border-radius: 50%;
     border: 2px solid #b9ccbd;
     background-color: #66ae55;
 }
-.graph 
+.Graph 
 {
-    flex: 1;
-    display: flex;
+    /*flex: 1;
+    display: flex;*/
     align-items: center;
     justify-content:right;
     border-radius: 10px;
@@ -145,13 +72,37 @@ border-radius: 50%;
     box-shadow: 1 4px 8px rgba(0, 0, 0, 0.1);
     }
 
-    .graph img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
-    }
-    p#message{
+p#error-message{
+        position: relative;
             color: red;
-            font-size: 0.9rem;
+            font-size: 16px;
+            top: 40%;
+            margin: 10px;
+            padding:20px;
+            font-weight: bold;
+            border: 2px solid brown;
             display: none; /* Hidden by default */
         }
+
+.errorIcon
+{
+    position: relative;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -30%);
+    width: 60px;
+    background-color: transparent; /* Ensures no background color for the image container */
+    mix-blend-mode: multiply; /* Blends the image with its background */
+}
+
+.errorIconDiv img 
+{
+    display:none;
+    width: 80px;
+    height: auto;
+    margin-right: 20px;
+    background-color: transparent; /* Ensures no background color for the image container */
+    mix-blend-mode: multiply; /* Blends the image with its background */
+}
+
+
